crates/dao/tests/compile_fail/execute_entity_field_count_mismatch.stderr
error[E0080]: evaluation panicked: parameter count mismatch: SQL has 2usize placeholders but entity has a different field count
  --> tests/compile_fail/execute_entity_field_count_mismatch.rs:13:1
   |
13 | #[dao]
   | ^^^^^^ evaluation of `<BadDao as BadDaoTrait>::bad_insert::{closure#0}::_` failed here
